refactor: 使用JDK 21现代化集合API优化代码
- ArrayUtils.java: 使用Arrays.asList()替代Guava的Lists.newArrayList()，减少外部依赖
- AccessLimiterHandler.java: 更新注释说明，文档化List.of()的使用
- 提升代码可读性和性能，符合《阿里巴巴Java开发规范》

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>